# packages/api-blog/src/Http/Requests/Category/BaseRequest.php
@@ -23,13 +23,13 @@ class BaseRequest extends FormRequest
             'meta_keywords' => 'string|nullable',
             'meta_language' => 'string|nullable',
             'tweet_text' => 'string|nullable',
-            'category_type' => 'string|required',
+            'issue_type' => 'string|required',
             'menu_order' => 'integer|nullable',
             'priority' => 'integer|nullable',
             'menu_status' => 'bool|nullable',
             'visible_index_status' => 'bool|nullable',
-            'pic_small' => 'nullable|mimes:jpeg,jpg,webp|max:10000',
-            'pic_large' => 'nullable|mimes:jpeg,jpg,png,webp|max:99000',
+            'media.pic_small' => 'nullable|mimes:jpeg,jpg,webp|max:10000',
+            'media.pic_large' => 'nullable|mimes:jpeg,jpg,png,webp|max:99000',
             'parent_id' => 'nullable|exists:categories,id',
         ];
     }
