# packages/api-blog/src/Http/Requests/Category/ListRequest.php
@@ -17,7 +17,7 @@ class ListRequest extends FormRequest
         return [
             'skip' => 'integer|required|min:0',
             'take' => 'integer|required|min:1',
-            'category_type' => 'string|required',
+            'issue_type' => 'string|required',
         ];
     }
 }
